--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <div class="four">
         <div class="text-box">
           <p class="hbd-chatbox">
-            Happy Valentine's Day!! Yeee! Love and blah blah...
+            Happy Valentine's Day!! Ya rouhi, blah blah...
           </p>
           <p class="fake-btn">Send</p>
         </div>
@@ -124,7 +124,7 @@
         </svg>
       </div>
       <div class="nine">
-        <p>Okay, now come back and tell me if you liked it.</p>
+        <p>Okay, now come back and tell me if you liked it, and im sorry for ruinning your last few days.</p>
         <p id="replay">Or click, if you want to watch it again.</p>
         <p class="last-smile">:)</p>
       </div>
