--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@
         </svg>
       </div>
       <div class="nine">
-        <p>Okay, now come back and tell me if you liked it, and im sorry for ruinning your last few days.</p>
-        <p id="replay">Or click, if you want to watch it again.</p>
+        <p>Okay, now come back and tell me if you liked it, im sorry for ruinning your last few days and i hope that you will really forgive me.</p>
+        <p id="replay">If you want to watch it again clich here.</p>
         <p class="last-smile">:)</p>
       </div>
     </div>
