--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
       </div>
       <div class="nine">
         <p>Okay, now come back and tell me if you liked it, im sorry for ruinning your last few days and i hope that you will really forgive me.</p>
-        <p id="replay">If you want to watch it again clich here.</p>
+        <p id="replay">If you want to watch it again click "here".</p>
         <p class="last-smile">:)</p>
       </div>
     </div>
